Add Pydoc Strings to Baseline Added Pydoc Strings to the functions used in the baseline.ipynb notebook.

--- a/notebooks/baseline.ipynb
+++ b/notebooks/baseline.ipynb
@@ -86,6 +86,15 @@
    "outputs": [],
    "source": [
     "def load_egg(eeg, meta, classes, stim_duration=5, sfreq=300, filter=True, drop_chan=['time',' TRG',' X1',' X2',' X3',' A2']):\n",
+    "    \"\"\"\n",
+    "    Turn 1 run of pandas-format eeg into numpy-format eeg\n",
+    "    eeg : pandas-format eeg data object\n",
+    "    meta : pandas-format meta data object\n",
+    "    classes : the classes contained in the mata data\n",
+    "\n",
+    "    returns eeg : numpy-format eeg data object in the dimension (num_trial, num_classes, num_channels, num_samples)\n",
+    "    \"\"\"\n",
+    "    \n",
     "    trials = meta[1:,:2]\n",
     "    times = []\n",
     "    duration_samples = int(stim_duration*sfreq)\n",
@@ -114,6 +123,16 @@
     "                n_trials=2,\n",
     "                n_classes=32,\n",
     "                sfreq=300):\n",
+    "    \"\"\"\n",
+    "    Load an eeg dataset by loading each individual runs and stacking them into a single numpy-format eeg object\n",
+    "    path : the directory of the dataset\n",
+    "    sub_dirs : the sub-folders each containing 1 block of the experiment\n",
+    "    n_trials : number of trials per class contained in 1 block\n",
+    "    drop_chans : channels to discard (could be non-eeg)\n",
+    "\n",
+    "    returns eeg : numpy-format eeg data object in the dimension (num_trial, num_classes, num_channels, num_samples)\n",
+    "    \"\"\"\n",
+    "\n",
     "    n_channels = 25 - len(drop_chan)\n",
     "    # load experimental dataset\n",
     "    eeg_whole = np.zeros((n_trials*len(sub_dirs),n_classes,n_channels,int(duration*sfreq)))\n",
@@ -169,6 +188,17 @@
    "outputs": [],
    "source": [
     "def run_fbtrca(eeg, target_by_trial, target_tab, duration=1.0, onset_delay=42,srate=300):\n",
+    "    \"\"\"\n",
+    "    Assess the LOO(Leave-One-Out) accuracy of FBTRCA(Filter-Bank Task-Related Component Analysis) from the Brainda Package\n",
+    "    eeg : numpy-format eeg data in the dimension (num_trial, num_classes, num_channels, num_samples)\n",
+    "    target_by_trial : the corresponding class label of each trial\n",
+    "    target_tab : a table matching class label to its corresponding frequency-phase pair\n",
+    "\n",
+    "    returns confusion_matrix, : the confusion matrix of all LOO runs\n",
+    "            loo_accuracy, : the mean of all LOO accuracies\n",
+    "            last_model : the model of the last LOO run\n",
+    "    \"\"\"\n",
+    "\n",
     "    eeg = np.copy(eeg)\n",
     "    np.random.seed(64)\n",
     "    np.random.shuffle(eeg)\n",
@@ -233,10 +263,14 @@
     "    return confusion_matrix(testYs, pred_labelss, normalize='true'), accuracy_score(testYs, pred_labelss), model\n",
     "\n",
     "def cm_graph(cm, acc):\n",
+    "    \"\"\"\n",
+    "    Plot confusion matrix and include an accuracy score on the title\n",
+    "    cm : the confusion matrix in the dimension (32,32)\n",
+    "    acc : the accuracy score\n",
+    "    \"\"\"\n",
+    "\n",
     "    plt.figure(figsize=(7, 6))\n",
-    "    # ax = sns.heatmap(confusion_matrix(testYs, pred_Ys, normalize='true'), cmap='Blues_r', norm=LogNorm())\n",
     "    ax = sns.heatmap(cm, cmap='Blues_r', norm=LogNorm())\n",
-    "    # ax.set_title('val acc: '+str(accuracy_score(testYs, pred_Ys)));\n",
     "    ax.set_title('loo acc: '+str(acc));\n",
     "    ax.set_xticks(range(32))\n",
     "    ax.set_yticks(range(32))\n",
