--- a/notebooks/baseline.ipynb
+++ b/notebooks/baseline.ipynb
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 72,
    "id": "04a7d916-9061-46bf-a523-1a736be994e9",
    "metadata": {},
    "outputs": [],
@@ -536,9 +536,9 @@
     "od_min = 40\n",
     "od_max = 44\n",
     "od_step = 1\n",
-    "dur_min = 1.3\n",
-    "dur_max = 1.4\n",
-    "dur_step = 0.1\n",
+    "dur_min = 1.35\n",
+    "dur_max = 1.47\n",
+    "dur_step = 0.05\n",
     "od_list = list(np.arange(od_min, od_max, od_step))\n",
     "dur_list = list(np.arange(dur_min, dur_max, dur_step))\n",
     "results_store = np.empty([len(dur_list), len(od_list)], dtype=float)"
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "id": "784d4b17-a3bd-403e-bfbf-491670ca2fb3",
    "metadata": {},
    "outputs": [
@@ -554,7 +554,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Duration\tDelay\tAccuracy\n"
+      "Duration\tDelay\tAccuracy\n",
+      "1.35\t40\t0.8953\n",
+      "1.40\t40\t0.8953\n",
+      "1.45\t40\t0.8953\n",
+      "1.35\t41\t0.9000\n",
+      "1.40\t41\t0.9016\n",
+      "1.45\t41\t0.9016\n",
+      "1.35\t42\t0.8984\n",
+      "1.40\t42\t0.9000\n",
+      "1.45\t42\t0.9000\n",
+      "1.35\t43\t0.8906\n",
+      "1.40\t43\t0.8906\n",
+      "1.45\t43\t0.8906\n"
      ]
     }
    ],
@@ -564,7 +576,9 @@
     "    for dur_count, dur in enumerate(dur_list):\n",
     "        mean_loo_accuracy = run_fbtrca(eeg, target_by_trial, target_tab, dur, od)\n",
     "        results_store[dur_count][od_count] = mean_loo_accuracy\n",
-    "        print(dur, od, mean_loo_accuracy, sep='\\t')"
+    "        dur_string = \"{:.2f}\".format(dur)\n",
+    "        acc_string = \"{:.4f}\".format(mean_loo_accuracy)\n",
+    "        print(dur_string, od, acc_string, sep='\\t')"
    ]
   },
   {
